	- Using BitsPerPixel and SDL-Flags from initial screen (LP: #243352)
	- Calling SDL_Quit on exit of the program (LP: #243597)
	- Distribution tarball includes manpage (LP: #243296)
	- Compiling (but not installing) fn_test_tilecache for devs
0.2.5
	- Made freenukum compile on AMD64 (LP: #242228)
0.2.4
	- Implemented flamethrower
	- Shots can no longer go through solid parts
	- Added ACME stone
	- Added Manpage
	- Implemented mines
	- Implemented floor which crashes when hero steps upon it twice
0.2.3
	- Implemented balloons
	- Implemented wall-crawling green bots
	- When hero gets hurt he has an immunity phase before he is hurt again
	- Made it possible to change to other episodes (if installed).
0.2.2
	- Implemented simple robot
	- Made hero motion model more similar to original game.
	- Elevators implemented
0.2.1
	- Hero can fetch guns for more firepower.
	- Hero can fetch boots and then jump higher.
	- Hero can use teleporters.
	- Hero can shoot boxes.
	- Keyhole stops blinking after key insert.
	- Hero can walk through opened doors immediately instead of having
	  to wait until the animation finishes.
	- Hero earns score for fetching keys.
	- Keys can now be used.
	- After finishing a level, we go on to the next instead of returning
	  to the title screen

0.2
	- Exit doors work now

0.1
	- Initial development release