@@ -1,6 +1,12 @@
 AC_INIT(Freenukum, 0.2.5, http://launchpad.net/freenukum/)
 AM_INIT_AUTOMAKE(freenukum, 0.2.5)
 
+AC_ARG_ENABLE(testprograms,
+    [  --enable-testprograms   Compile the test programs],
+    [BUILD_TESTPROGRAMS="yes"])
+
+AM_CONDITIONAL(TESTPROGRAMS, test x"$BUILD_TESTPROGRAMS" = xyes)
+
 AC_PROG_CC
 
 AC_CONFIG_SRCDIR(src)
