@@ -1,21 +1,6 @@
 AUTOMAKE_OPTIONS = foreign
 
 bin_PROGRAMS = freenukum
-noinst_PROGRAMS = fn_test_tilecache \
-                  fn_test_borders \
-									fn_test_draw \
-									fn_test_drop \
-									fn_test_effect \
-									fn_test_error \
-									fn_test_hero \
-									fn_test_infobox \
-									fn_test_mainmenu \
-									fn_test_level_loader \
-									fn_test_msgbox \
-									fn_test_picture \
-									fn_test_picture_splash \
-									fn_test_settings \
-									fn_test_tile
 
 INCLUDES = \
 					 -I$(srcdir)
@@ -46,8 +31,25 @@ freenukum_SOURCES = fn.h \
 										fn_shot.h           fn_shot.c \
 										freenukum.c
 
+if TESTPROGRAMS
+noinst_PROGRAMS = fn_test_tilecache \
+                  fn_test_borders \
+                  fn_test_draw \
+                  fn_test_drop \
+                  fn_test_effect \
+                  fn_test_error \
+                  fn_test_hero \
+                  fn_test_infobox \
+                  fn_test_mainmenu \
+                  fn_test_level_loader \
+                  fn_test_msgbox \
+                  fn_test_picture \
+                  fn_test_picture_splash \
+                  fn_test_settings \
+                  fn_test_tile
+
 fn_test_tilecache_SOURCES = fn_test_tilecache.c \
-														fn.h \
+                            fn.h \
 														fn_tilecache.h       fn_tilecache.c \
 														fn_tile.h            fn_tile.c \
 														fn_draw.h            fn_draw.c \
@@ -104,7 +106,7 @@ fn_test_hero_SOURCES = fn_test_hero.c \
                        fn.h
 
 fn_test_infobox_SOURCES = fn_test_infobox.c \
-											    fn_infobox.h        fn_infobox.c \
+													fn_infobox.h        fn_infobox.c \
 													fn_tilecache.h      fn_tilecache.c \
 													fn_tile.h           fn_tile.c \
 													fn_draw.h           fn_draw.c \
@@ -116,7 +118,7 @@ fn_test_mainmenu_SOURCES = fn_test_mainmenu.c \
 													 fn.h
 
 fn_test_level_loader_SOURCES = fn_test_level_loader.c \
-													     fn_hero.h           fn_hero.c \
+															 fn_hero.h           fn_hero.c \
 															 fn_tilecache.h      fn_tilecache.c \
 															 fn_tile.h           fn_tile.c \
 															 fn_draw.h           fn_draw.c \
@@ -124,44 +126,49 @@ fn_test_level_loader_SOURCES = fn_test_level_loader.c \
 															 fn_shot.h           fn_shot.c \
 															 fn_actor.h          fn_actor.c \
 															 fn_bot.h            fn_bot.c \
-															 fn_error_cmdline.h  fn_error_cmdline.c \
 															 fn_infobox.h        fn_infobox.c \
+															 fn_error_cmdline.h  fn_error_cmdline.c \
+															 fn_error.h          fn_error.c \
 															 fn_msgbox.h         fn_msgbox.c \
 															 fn_text.h           fn_text.c \
 															 fn.h
 
 fn_test_msgbox_SOURCES = fn_test_msgbox.c \
-												 fn_infobox.h        fn_infobox.c \
 												 fn_msgbox.h         fn_msgbox.c \
 												 fn_text.h           fn_text.c \
+												 fn_draw.h           fn_draw.c \
 												 fn_tilecache.h      fn_tilecache.c \
 												 fn_tile.h           fn_tile.c \
-												 fn_draw.h           fn_draw.c \
-												 fn.h
+												 fn_error_cmdline.h  fn_error_cmdline.c \
+												 fn_error.h          fn_error.c \
+                         fn.h
 
 fn_test_picture_SOURCES = fn_test_picture.c \
                           fn_picture.h        fn_picture.c \
 													fn_draw.h           fn_draw.c \
-													fn.h
+													fn_error_cmdline.h  fn_error_cmdline.c \
+													fn_error.h          fn_error.c \
+                          fn.h
 
 fn_test_picture_splash_SOURCES = fn_test_picture_splash.c \
-																 fn_picture_splash.h fn_picture_splash.c \
-                                 fn_error_cmdline.h  fn_error_cmdline.c \
-																 fn_error.h          fn_error.c \
-																 fn_picture.h        fn_picture.c \
+                                 fn_picture.h        fn_picture.c \
+                                 fn_picture_splash.h fn_picture_splash.c \
 																 fn_draw.h           fn_draw.c \
+																 fn_error_cmdline.h  fn_error_cmdline.c \
+																 fn_error.h          fn_error.c \
 																 fn_msgbox.h         fn_msgbox.c \
 																 fn_text.h           fn_text.c \
 																 fn_tilecache.h      fn_tilecache.c \
 																 fn_tile.h           fn_tile.c \
-																 fn.h
+                                 fn.h
 
 fn_test_settings_SOURCES = fn_test_settings.c \
-                           fn_settings.h      fn_settings.c \
-													 fn.h
+													 fn_settings.h      fn_settings.c \
+                           fn.h
 
 fn_test_tile_SOURCES = fn_test_tile.c \
                        fn_tile.h      fn_tile.c \
 											 fn_draw.h      fn_draw.c \
                        fn.h
 
+endif # TESTPROGRAMS
